Fixed scroll indicators overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1015,7 +1015,7 @@ section {
 
 .carousel .overview {
     text-align: center;
-    padding-bottom: 5px;
+    padding-bottom: 40px;
 }
 
 .carousel .overview b {
